# CI_Test_Project

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: BuildTest.yml
cmake/: Cache.cmake
src/: CMakeLists.txt  main.cpp  main.h
test/: CMakeLists.txt  test.cpp
